Fix content_shell quit correctly when the final Shell window closes.

This was broken by
https://chromium-review.googlesource.com/c/chromium/src/+/1090219
which failed to add the necessary link between the default //content
main loop runner and the Shell's quit closure.

Bug: 851416
Change-Id: Ib69c9da55fbcc6143031cce0bf3d5e16087e6e21
Reviewed-on: https://chromium-review.googlesource.com/1096475
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566861}